--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore Postgres logs.
+pg_upgrade_internal.log
+pg_upgrade_server.log
+pg_upgrade_utility.log
