--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,6 @@ test:
   <<: *default
   database: fantasia_test
 
-production:
-  <<: *default
-  database: fantasia_production
+# production:
+#   <<: *default
+#   database: fantasia_production
